# Astudio

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.en.md  README.md  config.example.yaml  electron-builder.yml  package.json  pnpm-lock.yaml
docs/: agent-zero.md  architecture.md  canvas-engine.md  context-distillation.md  (+3 more)
server/: .gitignore  README.md  desktop_entry.py  main.py  pyproject.toml
server/agents/: agent_zero.py  context.py  distiller.py  studio_leader_executor.py  sub_agent.py
server/core/: scheduler.py  task_process_runner.py  tasks_monitor.py
server/i18n/: __init__.py  status_message_codec.py
server/models/: canvas.py  config.py  sandbox.py  schedule.py  skill.py  studio.py  task.py
server/routers/: config.py  sandbox.py  schedule.py  skill.py  studio.py  task.py
server/services/: attachments.py  llm_service.py  model_capabilities.py  pricing.py  skill_import.py
server/storage/: config_store.py  database.py  sandbox_store.py  schedule_store.py  skill_store.py  studio_store.py  task_store.py
server/templates/: AGENT_ZERO.md  DISTILLER.md  EMPLOYEE.md  FACT_EXTRACT.md  HR_AGENT.md  LEADER_PLANNING.md  LEADER_REVIEW.md  SOUL_COMPRESS.md  SOUL_UPDATE.md  STUDIO_CARD_DISTILL.md  SYNTHESIS.md  SYSTEM_TASK_CLASSIFIER.md
server/tools/: __init__.py  attachments.py  browser_search.py  code_runner.py  context.py  execution_safety.py  executor.py  file_ops.py  registry.py  sandbox_ops.py  sandbox_runtime.py  scheduler.py  skill_hub.py  web_search.py
server/utils/: language.py
server/workers/: __init__.py  task_worker.py
(+115 files in other folders)
